Fix alignment of events list by removing wrapper.

--- a/src/components/Event/Event.css
+++ b/src/components/Event/Event.css
@@ -1,23 +1,23 @@
 .event-container {
-    display: flex;
-    align-items: center;
     padding: 1vh 4vw;
-    height: 15vh;
-    width: 75vw;
-    margin: 1vh 5vw;
     border: 1px solid black;
     background-color: white;
 }
 
 .event-filler {
+    justify-content: center;
+    border: 2px dotted var(--gray-dark)
+}
+
+.event {
     display: flex;
     align-items: center;
-    justify-content: center;
     height: 15vh;
     width: 75vw;
     margin: 1vh 5vw;
-    border: 2px dotted var(--gray-dark)
+    border-radius: 10px;
 }
+
 
 .event-filler button {
     display: relative;
