--- a/src/pages/EventsPage/EventsPage.css
+++ b/src/pages/EventsPage/EventsPage.css
@@ -1,6 +1,7 @@
 .events-page {
     height: 100%;
     max-height: max-content;
+    overflow-y: hidden;
 }
 
 .user-profile-container {
@@ -13,9 +14,12 @@
     border: 0px 0px 4px 0px solid var(--gray-light); 
 }
 
-.events-wrapper {
+/* .events-wrapper {
     background-color: var(--lighter-blue);
-    height: 55vh;
-    margin: 0 auto;
+    position: absolute;
+    width: 100%;
+    height: 60%;
+    bottom: 0;
+    left: 0;
     overflow-y: hidden;
-}
+} */
